Cleaned gallery. Updated todo.

--- a/hubble/src/components/README.org
+++ b/hubble/src/components/README.org
@@ -5,7 +5,8 @@
 - [X] Current JSON format is ~{photos}/{int}/{...}~. Rebuild after fetch to format ~[array]/{int}/{...}~.
 - [X] Follow up by getting ~image_src~ value printed in html cards.
 - [X] Check if a production build will fix the double API call issue.
-- [ ] Production build still double calling. Fix the issue.
+- [X] +Production build still double calling. Fix the issue.+ Fetch was never double calling. API contains duplicates.
+- [ ] Implement sorting algorithm to remove duplicates.
 - [ ] Follow up by printing ~{camera: full_name}~ and ~{rover: name}~ into respective fields.
 
 - [ ] Create ENV file for API key.
