--- a/README.org
+++ b/README.org
@@ -7,6 +7,8 @@ then loops through and inserts the image links into HTML cards utilizing Reactsâ
 
 Currently all images in the gallery are duplicated. This is due to the API itself containing duplicate images. While not an issue on the projects' side, it could be mitigated using an algorithm to remove the duplicates after the API call.
 
+Project is currently set to display mars rover images.
+
 #+caption: Homepage
 [[./images/gallery-home.png]]
 
