--- a/nasa/src/components/README.org
+++ b/nasa/src/components/README.org
@@ -6,8 +6,8 @@
 - [X] Follow up by getting ~image_src~ value printed in html cards.
 - [X] Check if a production build will fix the double API call issue.
 - [X] +Production build still double calling. Fix the issue.+ Fetch was never double calling. API contains duplicates.
+- [X] Follow up by printing ~{camera: full_name}~ into image alt field.
 - [ ] Implement sorting algorithm to remove duplicates.
-- [ ] Follow up by printing ~{camera: full_name}~ and ~{rover: name}~ into respective fields.
 
 - [X] Create ENV file for API key.
 
